tests/script/negative/undefinedness/record-access-uninit.out
Error at Line 12, Column 8:
   Reference to invalid field 'f2'. The following fields are defined for every constructor:
      int f1